<resources>
    <string name="app_name">SEG3102Final</string>
    <string name="action_settings">Logout</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="user_type">What are you?</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="title_activity_student_operations">Student Operations</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_team">Create Team</string>
    <string name="title_activity_join_team">Join Team</string>
    <string name="title_activity_accept_new_students">Accept New Students</string>
    <string name="title_activity_instructor_operations">Instructor Operations</string>
    <string name="title_activity_visualize_student_teams">Visualize Student Teams</string>
    <string name="title_activity_setup_parameters">Setup Parameters</string>
    <string name="title_activity_select_team_parameters">Select Team Parameters</string>
    <string name="course_code">Course Code:</string>
    <string name="course_section">Course Section:</string>
    <string name="course_code_example">Example: SEG 3102</string>
    <string name="course_section_example">Example: A</string>
    <string name="min_students">Min Students:</string>
    <string name="min_students_example">Example: 1</string>
    <string name="max_students">Max Students:</string>
    <string name="max_students_example">Example: 5</string>
    <string name="deadline">Deadline:</string>
    <string name="deadline_example">Example: dd/MM/yyyy HH:MM</string>
    <string name="setup_parameters">Setup parameters</string>
    <string name="team_name">Team Name:</string>
    <string name="addMembers">+</string>
    <string name="added_members">Students currently in team</string>
    <string name="select_student">Add students</string>
    <string name="action_type">Login</string>
    <string name="action_type_inverse">Register?</string>
    <string name="date_of_creation">Created on</string>
    <string name="team_size">Size</string>
    <string name="liason">Liason username</string>
    <string name="current_members">Students in team</string>
    <string name="requested_members">Students requesting to join team</string>
</resources>
