<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_creation"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateOfCreation"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_size"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamSize"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liason"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/liason"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_members"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/addedMembers"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requested_members"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/requestedMembers"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>