<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.TMS.uni.seg3102final.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/uottawa" />


    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"/>

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/registerLayout">
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/firstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:inputType="text"/>
        <EditText
            android:id="@+id/lastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:inputType="text"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/user_type">
            <RadioButton android:id="@+id/radio_instructor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructor"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <Button
        android:text="Login"
        android:id="@+id/loginButton"
        android:background="#8f001a"
        android:textColor="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="login" />
    <Button
        android:text="Register"
        android:id="@+id/registerButton"
        android:layout_toRightOf="@+id/loginButton"
        android:background="#8f001a"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="register" />
    </LinearLayout>

</LinearLayout>
